adding functionalities and tests